# t80m

./: LICENSE  README.md  pyproject.toml  t80m.py
tcolmanager/: __init__.py  config.py  csv_manager.py  data_utils.py  filename_utils.py  gamelist_utils.py  itch_api_client.py  main.py  media_utils.py  tic80_api_client.py
tcolmanager/commands/: __init__.py  ai_assistant.py  dispatchers.py  export_collection.py  get_coverarts.py  get_ipfs_roms.py  get_itch_roms.py  get_tic80_roms.py  import_json.py  import_xml_data.py  init.py  recalculate_hashes.py  sync_filenames.py  update_gamelistxml.py  update_itch_csv.py  update_tic80_csv.py
tcolmanager/utils/: __init__.py  cli_completion.py  logger.py
